vm-migration: add connections field to HTTP API
This is not wired up to anywhere yet. We will use this to establish
multiple connections for live migration.

On-behalf-of: SAP julian.stecklina@sap.com
