# vmm/src/api/mod.rs
@@ -34,6 +34,7 @@ pub mod dbus;
 pub mod http;
 
 use std::io;
+use std::num::NonZeroU32;
 use std::sync::mpsc::{RecvError, SendError, Sender, channel};
 
 use micro_http::Body;
@@ -255,7 +256,7 @@ pub struct VmCoredumpData {
     pub destination_url: String,
 }
 
-#[derive(Clone, Deserialize, Serialize, Default, Debug)]
+#[derive(Clone, Deserialize, Serialize, Debug)]
 pub struct VmReceiveMigrationData {
     /// URL for the reception of migration state
     pub receiver_url: String,
@@ -266,9 +267,13 @@ pub struct VmReceiveMigrationData {
     pub net_fds: Option<Vec<RestoredNetConfig>>,
 }
 
-#[derive(Clone, Deserialize, Serialize, Default, Debug)]
+#[derive(Clone, Deserialize, Serialize, Debug)]
 pub struct VmSendMigrationData {
-    /// URL to migrate the VM to
+    /// URL to migrate the VM to.
+    ///
+    /// This is not actually a URL, but we are stuck with the name, because it's
+    /// part of the HTTP API. The destination is a string, such as
+    /// tcp:<host>:<port> or unix:/path/to/socket.
     pub destination_url: String,
     /// Send memory across socket without copying
     #[serde(default)]
@@ -279,11 +284,19 @@ pub struct VmSendMigrationData {
     /// Second level migration timeout
     #[serde(default)]
     pub migration_timeout: u64,
+    /// The number of parallel connections for migration
+    #[serde(default = "default_connections")]
+    pub connections: NonZeroU32,
 }
 
 // Default value for downtime the same as qemu.
 fn default_downtime() -> u64 {
     300
+}
+
+// We use a single connection for backward compatibility as default.
+fn default_connections() -> NonZeroU32 {
+    NonZeroU32::new(1).unwrap()
 }
 
 pub enum ApiResponsePayload {
