# vmm/src/api/openapi/cloud-hypervisor.yaml
@@ -1245,6 +1245,10 @@ components:
         - destination_url
       type: object
       properties:
+        connections:
+          type: integer
+          format: int64
+          default: 1
         destination_url:
           type: string
         local:
